@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install prepare setup
+DEPEND=mpi? ( virtual/mpi ) sci-libs/voro++ virtual/fortran
+DESCRIPTION=Large-scale Atomic/Molecular Massively Parallel Simulator
+EAPI=5
+HOMEPAGE=http://lammps.sandia.gov/
+IUSE=doc examples gzip lammps-memalign mpi static-libs
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=mpi? ( virtual/mpi ) sci-libs/voro++ virtual/fortran
+SLOT=0
+SRC_URI=http://lammps.sandia.gov/tars/lammps-20Mar14.tar.gz
+_eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	fortran-2	db8710b355fc5598015c4bc3aad3bdb0	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=cc4b7e6d8db03597af15f988ac08ff46
