@@ -7,6 +7,7 @@ DIST lammps-12Mar14.tar.gz 58562523 SHA256 7575cdf8d2edf0429804d2d1d523c24921fe4
 DIST lammps-14Feb14.tar.gz 58547063 SHA256 188aa10c8984457e5559c30396ef56a0af51c69242b6b1ac10afa29b11ace4d9 SHA512 9fea6054e507eebc3eb41e7a6685d91bd58afd4b4c4eac692bf21bfadf48d34dfe6143d1775be89badfcb3ef5ec5a81e15c06797ac055cdf149f8139c868a0f7 WHIRLPOOL 7460b93649e9c3a6e0648e6368291205e97796b536a7b51ef59766d9db65ef7b8c2a43f24194980762c9c5b2b896d75b13c14e1350ea344fc46075269c87b098
 DIST lammps-14Mar14.tar.gz 58562398 SHA256 679378e2cb2b44a93be671ee7c0f14f297c593511da72e70933e1349131abd26 SHA512 0289dc16795b89c2167eb5a9be0243b56a33ee1976dae6ce57a486ffe574cd12a6904bd36e76983e45126a3356b8d09407f44afc1c1ef0f28af76500901f3e7a WHIRLPOOL 54a6d99806fc5472cd13e26a506f2595cb45187d5481c99208747f8357461f2e9dfb3654804d3f71f8a3d1a37eb8d82688bd970a61e27ad951eab1360239f75b
 DIST lammps-1Feb14.tar.gz 57811478 SHA256 2d01ca4f2c52c18a9a95866f558b3f3857b22662415cb44fa16a5be4dd5bfe44 SHA512 aa84766d19d7f9f753792d6c3a9ba9b37faa671b4ae06ae89be6d3485a064326c79dc351cb784e6a03f5e4e046885a791274a64899ef117dd395e583eac13f3c WHIRLPOOL 4921525762c5842fe7bb96420db26553bf2ea3d91bfda52d2a9fad57f205487fe772c878d83e5b4ae146507e3a90509a4ff0b5628ebfda9a5dde82b8b3a95b3b
+DIST lammps-20Mar14.tar.gz 58582788 SHA256 cb2fce0cfb0066833bfe2ff5d9a3b55e83bf171b794abadd8eb755f14d05e302 SHA512 bbb5d92bfd8357137f8b85a4fe459c1fe0c8fbd84d3d4267b2109e56673c651e37b92b672762a91c9b535115810fbd542a9d8c4288e45328e23e4b5001258549 WHIRLPOOL b9600147aac14d8b0ad5437f70da042acc0895e116cbd819bc3031c26b7a8f2de34298d6ef8b49a169c475799537c3e7604f9b9788bb2f65f271dc46c56a7c7b
 DIST lammps-26Feb14.tar.gz 58551714 SHA256 3dd65b7396d7e30570c6070518cb78d235273acda180f65a939aa6c95c7c1412 SHA512 d8ea6ae308691cd5452265db213146fcac39a0c4139f248575e5eea394ea0c2079936a46636fcea38dcb7d68c9457f58c477fa2ee04264df628ec94a1c3c8182 WHIRLPOOL 68b40a8ddc15bac55b6295d07ef91b63755ec75707aa77d6a8654ff0ab42ad3c862884861cddc8b1cece9fe54aa153b71e9e474368455921e8c39b2d5129f94d
 DIST lammps-4Mar14.tar.gz 58554657 SHA256 963a486c9d0dc798d4986bd8d603d27f27042d5080320b584006c767cf3d787e SHA512 c2c2e2fe60d44ee8676753dac60166a935c3f40a3f89dc322b058090d9193c33e1682296d78add5dfc5f5b3d0796155a025c6855818ca4735960fbf2c8922ca2 WHIRLPOOL 2970c824008baa745d79b4e2f6c8d6d2ca96dbbde2be7df577cd97eef86276cd2573ab91345c64fde84aed5a6e1dc9abc6bbe7a869d5a54197c9e3fe53d19775
 EBUILD lammps-20140201.ebuild 2467 SHA256 dabebb7bbd33a22023f218fea5331d68b2eba0666712dd080b13bfa630c4529c SHA512 944ce71a43d978909c5c0b129072cf7532cb10db4c5e6ac24cfbf85afcecac4ca9bbfafe4e147fc429c94aeecd7b4765a821c1a538267b75a045ffa1f41ebd39 WHIRLPOOL 113ebc1905299fdae5b6b5f4f57fd862e920ead05afd4f5850e341b6266f9a1a14a79d7f627d6915454b748960718ee08bfb84eea0ee1f03ec21fc28f8e73bd3
@@ -19,16 +20,13 @@ EBUILD lammps-20140304.ebuild 4202 SHA256 369265a9f276092833b8b11f7d3e938307dd54
 EBUILD lammps-20140310.ebuild 4230 SHA256 ac5aa1bf973aa3ca068fd27a387e80e01758b1cd1fbce1fba730ba2694ba987d SHA512 8d907a4200f0d5989497ef329365868f4999207089f6f61122f80f1643174a26d069b2b80c140bda0c816cd490bb0dc3fd3dffbb4c7338d9fd68b1319273acbd WHIRLPOOL 55ea36b4d956bc2030fb8d4a8cc992549f02410bfaf2780f32849f9f3690e691aaa3f8c4772464e0219f6f30f5c7a9f3d64855eefd4357b02d09ee4ebe568561
 EBUILD lammps-20140312.ebuild 4149 SHA256 ab5c63974c020f573b3f6d51b237acb1b69732ab178c8d183e48a6189035c7f9 SHA512 10d815fdcae8363e45bf53359c397e161e9dd07c2ab02b596c9c6e0fe09a1743a301f99a5055bd8b9893a2c6e3ea7c129532ebe2669229b8da6900186eb233c9 WHIRLPOOL 6a919eecd4c77c5cc1564799a2871e932ca2b252f831b2726c529a29ad78c6bfe8d0cc87baabbbbaae470ef137a6771e34185a4608066b1b60c52f452076381d
 EBUILD lammps-20140314.ebuild 4149 SHA256 96eb57bbe13d1d51222fa1edd9827c79c00e7d2a7f16b3fdf0b0774e9b2c1024 SHA512 627984a4b1c63039c3da6e5eeb7bec67eee548562f661f30ae0114a02bc0cf9f5722478dbfdb630375c1873432d30df6fcab75668b410a27d9f7535a244559ed WHIRLPOOL c9e89e0af049334ddd082bae001102a11bc5f5a468d15762270b03977254450ac3ee52fa5f225fbd5d07aedb0ef7bf4143c1d2680be586038549fe410fb88e67
-MISC ChangeLog 5454 SHA256 95ee7c6add5d4b2c25e249e931afb6ff4cb7fdf3f0a8cfa220824a3c1359e4a9 SHA512 b5d418ee3cf9ad03a360b8551e085cfd09b4e80275bbc7cf3a2d9859398438ce07cb415ce289d3e61814900a5656351c1a3d2986b9b662b561d0b67d3af0840d WHIRLPOOL f1c6186b2f5e5bc09658730bf9417b0a11e3aa2d33d135a3f68c078e048f14bc72576d6d4cc5ba3877a1d41ab20605f719c43080f08bf2e7ca4733ebc242ac1b
+EBUILD lammps-20140320.ebuild 4625 SHA256 48c1ad720a757c0a705a2d5bd4606f5435a0d3e14e6bc4a7360f075369cde980 SHA512 c122dcc05362eba440e532c3d55435cc4493af6669638ed897171f6a3df60eda9ba49a6251f2b9959f0fe32361eeeddf90f1b4c589ec7f07529c3609883325af WHIRLPOOL f652faa83734b0f65dad4f836efbe3378db8fb837e3a0fc109e410fbce2864f1ac1c907f69d8a9ed0a70fca5198ddf5dcbb9e1b2035f1cb327fbea6251bbafc1
+MISC ChangeLog 5615 SHA256 2e66b68da9f765b200170e835d4c865bd61f6fe5f66b7546e1a36fba2041307a SHA512 fe6b5a53fed0e1df6192926a46848c6045344c56245bec7ee0468669f4a877686c40f462ac9b2d201531194c22127048969e98f905a1dfa26af5680e63fa990c WHIRLPOOL ba45ba04d17b18de488fa508bf1134ef3f292e6fe6f4de972c3a0803582e92381ff5ca25d33e4729cc2daceea0e3fe4c8f8c507eba934caf1b6003d2ee4f4935
 MISC metadata.xml 1584 SHA256 4d06db7368b155db1484a6c0792a366b37541260e700248ccf542e5fe28ffbc7 SHA512 b0bbd1fdd37e35ccc0cd4d34bb9afa09910b56a14daa078148aefcce4dc13408c1a5d5a40b865a37bc917764f5b91e266256b9ca83e0f8009859d955b68fe6a8 WHIRLPOOL ff65f1a03910b4fa5758d5537d898c733971e5f339dcd8150bc1596dfcf490b4de2be7f520405a47274e1e9827eddc3d8a1324f2f169d575d1e4584dc01e9787
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTJxT2AAoJEOeBhlrCAAWGRQ4H/A5c/it9Hqk/v1MhW/p1jMx4
-AQzCnl55aXUGS28k3izcQFILprAVWzn0y7vG45ZztptCGpLXRQP+8s4Pv6s+KK5n
-+7fvNFbMPkJklM4afyzcVn5UPTf27fbwc4dQMF9h6TeZnk4MKkKLGFLIJs8OmwCz
-bGaVHbvDjur31u3O491r+nyY81Um43s4VBy0hbP4OfRhl2o3O13cgYScIg430TT3
-EAx9q9jBHF9nsIhKGLFig6Ca95irOspXgjnMe8C8rPf/avb85B7VyeRdzaYXAIjm
-IMWt/ev6i7GEjBJgIN+03ny0zezS+FkTOXBDSBfoGDcOcCFhCWT++cXhPl3pHRo=
-=cSCT
+iEYEAREIAAYFAlM5XycACgkQf15tZKyRylJ4ZgCgrdsS4ghPEtFNrtKodgXSXuNx
+yIsAnihM0eebXxzrLUEyHQ6Imnua/OPx
+=9eoX
 -----END PGP SIGNATURE-----
