@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.8762 2014/03/30 23:04:13 tomwij Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.8763 2014/03/31 12:01:43 tomwij Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  31 Mar 2014; Tom Wijsman <TomWij@gentoo.org> package.mask:
+  Prevent users from switching JDK / JRE implementation.
 
   30 Mar 2014; Tom Wijsman <TomWij@gentoo.org>
   arch/amd64/package.use.stable.mask, arch/x86/package.use.stable.mask,
